--- a/public/css/admin/docentes/index.css
+++ b/public/css/admin/docentes/index.css
@@ -452,4 +452,5 @@
 /* Pagination */
 .pagination-wrapper {
     width: 100%;
+    margin-top: 1rem; /* Added gap between table and pagination */
 }
